# libbig

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  LICENSE.md  README.md
include/libbig/: big.hpp  manager.hpp
src/: CMakeLists.txt  big.cpp  buffer.hpp  manager.cpp  util.hpp
test/: CMakeLists.txt  main.cpp
tools/: CMakeLists.txt
tools/big_edit/: CMakeLists.txt  editor.cpp  editor.hpp  main.cpp
tools/big_util/: CMakeLists.txt  main.cpp
